tests/negative/test_unty_bad_type.orb
fnc main() () {
    let (x 1000:i8);
};